Fix dark mode bug

--- a/src/components/CountryDetail/CountryDetails.scss
+++ b/src/components/CountryDetail/CountryDetails.scss
@@ -4,7 +4,8 @@
   padding-left: 5rem;
   padding-right: 5rem;
   padding-bottom: 5rem;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   &__back {
     padding-top: 80px;
     padding-bottom: 80px;
@@ -78,7 +79,7 @@
       display: flex;
       flex-direction: column;
       @media (max-width: $lg) {
-        margin-bottom: 20px;
+        padding-bottom: 20px;
       }
     }
     &-side2 {
